tests/enum_into/compile_fail/field/invalid_attribute_syntax.stderr
error: Expected TargetEnum::field_name
 --> tests/enum_into/compile_fail/field/invalid_attribute_syntax.rs:7:21
  |
7 |         #[enum_into(Target::Struct::a)] // Should be #[enum_into(Target::a)]
  |                     ^^^^^^^^^^^^^^^^^
